# python-project-lvl1

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  test.py
brain_games/: cli.py
brain_games/scripts/: brainCalc.py  brainEven.py  brainGames.py  brainGcd.py  brainPrime.py  brainProgression.py
