[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["rinat_rinat <rinatlucke@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brainGames:main"
brain-even = "brain_games.scripts.brainEven:main"
brain-calc = "brain_games.scripts.brainCalc:main"
brain-gcd = "brain_games.scripts.brainGcd:main"
brain-progression = "brain_games.scripts.brainProgression:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
